--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
             </div>
             <div class="about-content">
                 <div class="about-img">
-                    <img src="/img/tony.jpg" alt="Javier Guerrero - Coach Personal">
+                    <img src="img/tony.jpg" alt="Javier Guerrero - Coach Personal">
                 </div>
                 <div class="about-text">
                     <h4>Javier Guerrero</h4>
@@ -567,7 +567,7 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">
-                        <img src="/img/Coaching grupal.jpg" alt="Coaching Individual">
+                        <img src="img/Coaching grupal.jpg" alt="Coaching Individual">
                     </div>
                     <div class="service-content">
                         <h4>Coaching Individual</h4>
@@ -577,7 +577,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <img src="/img/Talleres.jpg" alt="Talleres Grupales">
+                        <img src="img/Talleres.jpg" alt="Talleres Grupales">
                     </div>
                     <div class="service-content">
                         <h4>Talleres Grupales</h4>
@@ -587,7 +587,7 @@
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <img src="/img/conferencias.jpeg" alt="Conferencias Motivacionales">
+                        <img src="img/conferencias.jpeg" alt="Conferencias Motivacionales">
                     </div>
                     <div class="service-content">
                         <h4>Conferencias Motivacionales</h4>
