--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
         /* Hero Section */
         .hero {
-            background: url('/api/placeholder/1200/500') center/cover;
+            background: url('img/TONY-ROBBINS.jpeg') center/cover;
             height: 70vh;
             display: flex;
             align-items: center;
